--- a/archives/toutiao-search/2024-03-04.md
+++ b/archives/toutiao-search/2024-03-04.md
@@ -1,36 +1,62 @@
 # 2024-03-04
 
-共 137 条
+共 160 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Mar 04 2024 09:45:03 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Mar 04 2024 10:54:30 GMT+0800 (China Standard Time) -->
+1. [跳水世界杯女子10米台陈芋汐夺冠](https://so.toutiao.com/search?keyword=跳水世界杯女子10米台陈芋汐夺冠)
 1. [香港楼市火爆售楼处人挤人](https://so.toutiao.com/search?keyword=香港楼市火爆售楼处人挤人)
-1. [网友：快递新规可以破除无效内卷](https://so.toutiao.com/search?keyword=网友：快递新规可以破除无效内卷)
 1. [这就是春天里的中国](https://so.toutiao.com/search?keyword=这就是春天里的中国)
 1. [一退伍士兵“研究”如何出高铁站](https://so.toutiao.com/search?keyword=一退伍士兵“研究”如何出高铁站)
-1. [媒体：军官录音事件德国又尴尬一次](https://so.toutiao.com/search?keyword=媒体：军官录音事件德国又尴尬一次)
-1. [跳水世界杯女子10米台陈芋汐夺冠](https://so.toutiao.com/search?keyword=跳水世界杯女子10米台陈芋汐夺冠)
-1. [高中毕业生李想的特别之处](https://so.toutiao.com/search?keyword=高中毕业生李想的特别之处)
-1. [比亚迪给合资燃油车多大压力](https://so.toutiao.com/search?keyword=比亚迪给合资燃油车多大压力)
-1. [又有两家加入 车企降价大战升级](https://so.toutiao.com/search?keyword=又有两家加入+车企降价大战升级)
+1. [男子在健身房锻炼被拎起腿往前推](https://so.toutiao.com/search?keyword=男子在健身房锻炼被拎起腿往前推)
+1. [一不小心拍到了数学书封面](https://so.toutiao.com/search?keyword=一不小心拍到了数学书封面)
+1. [网友称菜鸟驿站跑路大堆快递扔路面](https://so.toutiao.com/search?keyword=网友称菜鸟驿站跑路大堆快递扔路面)
+1. [跳水世界杯：王宗源男子三米板夺冠](https://so.toutiao.com/search?keyword=跳水世界杯：王宗源男子三米板夺冠)
+1. [郭正亮曝绿营高层或欲搞大渔船事件](https://so.toutiao.com/search?keyword=郭正亮曝绿营高层或欲搞大渔船事件)
 1. [郑州现最薄纸片楼？官方辟谣](https://so.toutiao.com/search?keyword=郑州现最薄纸片楼？官方辟谣)
 1. [张家辉说周处除三害是近五年最佳](https://so.toutiao.com/search?keyword=张家辉说周处除三害是近五年最佳)
 1. [十个勤天原价4.9元生菜被炒到300元](https://so.toutiao.com/search?keyword=十个勤天原价4.9元生菜被炒到300元)
 1. [西班牙女演员在印度遭7人施暴](https://so.toutiao.com/search?keyword=西班牙女演员在印度遭7人施暴)
+1. [霉霉演唱会求婚现场](https://so.toutiao.com/search?keyword=霉霉演唱会求婚现场)
+1. [比亚迪给合资燃油车多大压力](https://so.toutiao.com/search?keyword=比亚迪给合资燃油车多大压力)
+1. [媒体：军官录音事件德国又尴尬一次](https://so.toutiao.com/search?keyword=媒体：军官录音事件德国又尴尬一次)
+1. [吴艳妮回应无缘世锦赛半决赛](https://so.toutiao.com/search?keyword=吴艳妮回应无缘世锦赛半决赛)
+1. [医生：勿跟风模仿迪丽热巴天使蹲](https://so.toutiao.com/search?keyword=医生：勿跟风模仿迪丽热巴天使蹲)
 1. [韩国民众凌晨排队告别大熊猫福宝](https://so.toutiao.com/search?keyword=韩国民众凌晨排队告别大熊猫福宝)
-1. [韩国熊猫饲养员姜爷爷宋爷爷哭了](https://so.toutiao.com/search?keyword=韩国熊猫饲养员姜爷爷宋爷爷哭了)
-1. [董明珠建议上市公司高管不得减持股票](https://so.toutiao.com/search?keyword=董明珠建议上市公司高管不得减持股票)
+1. [奔驰重回燃油车对国产电车有何影响](https://so.toutiao.com/search?keyword=奔驰重回燃油车对国产电车有何影响)
+1. [网友：快递新规可以破除无效内卷](https://so.toutiao.com/search?keyword=网友：快递新规可以破除无效内卷)
 1. [女子买茅台验真伪遭死亡威胁](https://so.toutiao.com/search?keyword=女子买茅台验真伪遭死亡威胁)
+1. [高校呼吁毕业生不要只盯着升学考公](https://so.toutiao.com/search?keyword=高校呼吁毕业生不要只盯着升学考公)
+1. [哈登库里今日同砍4分](https://so.toutiao.com/search?keyword=哈登库里今日同砍4分)
+1. [又有两家加入 车企降价大战升级](https://so.toutiao.com/search?keyword=又有两家加入+车企降价大战升级)
+1. [董明珠建议上市公司高管不得减持股票](https://so.toutiao.com/search?keyword=董明珠建议上市公司高管不得减持股票)
+1. [女子动物园抱孩子下车 狼悄摸靠近](https://so.toutiao.com/search?keyword=女子动物园抱孩子下车+狼悄摸靠近)
+1. [姐弟拍跳舞视频 狗狗也在跟着跳](https://so.toutiao.com/search?keyword=姐弟拍跳舞视频+狗狗也在跟着跳)
+1. [绿军11连胜场均净胜22.1分](https://so.toutiao.com/search?keyword=绿军11连胜场均净胜22.1分)
+1. [韩国熊猫饲养员姜爷爷宋爷爷哭了](https://so.toutiao.com/search?keyword=韩国熊猫饲养员姜爷爷宋爷爷哭了)
+1. [快递员称加钱包裹上门送件引争议](https://so.toutiao.com/search?keyword=快递员称加钱包裹上门送件引争议)
+1. [代表：将2至3岁幼儿纳入学前教育](https://so.toutiao.com/search?keyword=代表：将2至3岁幼儿纳入学前教育)
+1. [又到了荠菜最好吃的季节](https://so.toutiao.com/search?keyword=又到了荠菜最好吃的季节)
+1. [高中毕业生李想的特别之处](https://so.toutiao.com/search?keyword=高中毕业生李想的特别之处)
+1. [娃哈哈纯净水瓶身印有当地美景](https://so.toutiao.com/search?keyword=娃哈哈纯净水瓶身印有当地美景)
+1. [代表建议高校招生适度倾斜人口大省](https://so.toutiao.com/search?keyword=代表建议高校招生适度倾斜人口大省)
 1. [撞车后女子称没买车险让货车认全责](https://so.toutiao.com/search?keyword=撞车后女子称没买车险让货车认全责)
+1. [印度还是对马尔代夫下手了](https://so.toutiao.com/search?keyword=印度还是对马尔代夫下手了)
 1. [生产方称火腿异物非老鼠尾巴](https://so.toutiao.com/search?keyword=生产方称火腿异物非老鼠尾巴)
-1. [媒体谈如何破解年轻人不愿进厂难题](https://so.toutiao.com/search?keyword=媒体谈如何破解年轻人不愿进厂难题)
+1. [詹俊：曼联这个赛季是“灾难性”的](https://so.toutiao.com/search?keyword=詹俊：曼联这个赛季是“灾难性”的)
 1. [王海打假金龙鱼五常大米](https://so.toutiao.com/search?keyword=王海打假金龙鱼五常大米)
+1. [美轰炸机挂高超导弹现身关岛](https://so.toutiao.com/search?keyword=美轰炸机挂高超导弹现身关岛)
+1. [刘结一回应青年人就业：来之不易](https://so.toutiao.com/search?keyword=刘结一回应青年人就业：来之不易)
+1. [马来西亚：尽快重启马航MH370搜索](https://so.toutiao.com/search?keyword=马来西亚：尽快重启马航MH370搜索)
+1. [人大代表雷军公布4份建议案](https://so.toutiao.com/search?keyword=人大代表雷军公布4份建议案)
+1. [郭正亮谈对韩国瑜炸弹恐吓：须当真](https://so.toutiao.com/search?keyword=郭正亮谈对韩国瑜炸弹恐吓：须当真)
+1. [香港楼市“撤辣”新盘数小时内售罄](https://so.toutiao.com/search?keyword=香港楼市“撤辣”新盘数小时内售罄)
+1. [媒体谈如何破解年轻人不愿进厂难题](https://so.toutiao.com/search?keyword=媒体谈如何破解年轻人不愿进厂难题)
+1. [《庆余年2》定档央视6月播出](https://so.toutiao.com/search?keyword=《庆余年2》定档央视6月播出)
+1. [你的孩子还会说方言吗](https://so.toutiao.com/search?keyword=你的孩子还会说方言吗)
 1. [凯尔特人单赛季三次50+大胜](https://so.toutiao.com/search?keyword=凯尔特人单赛季三次50+大胜)
 1. [摩根：世界足球史上最魔鬼的失空门](https://so.toutiao.com/search?keyword=摩根：世界足球史上最魔鬼的失空门)
-1. [印度还是对马尔代夫下手了](https://so.toutiao.com/search?keyword=印度还是对马尔代夫下手了)
-1. [娃哈哈纯净水瓶身印有当地美景](https://so.toutiao.com/search?keyword=娃哈哈纯净水瓶身印有当地美景)
 1. [以色列经济靠什么立足](https://so.toutiao.com/search?keyword=以色列经济靠什么立足)
-1. [《庆余年2》定档央视6月播出](https://so.toutiao.com/search?keyword=《庆余年2》定档央视6月播出)
 1. [马航MH370乘客家属发声](https://so.toutiao.com/search?keyword=马航MH370乘客家属发声)
 1. [男子偷走备用钥匙 与车主错峰用车](https://so.toutiao.com/search?keyword=男子偷走备用钥匙+与车主错峰用车)
 1. [快递员得知新规两天后离职](https://so.toutiao.com/search?keyword=快递员得知新规两天后离职)
@@ -39,12 +65,10 @@
 1. [快递小哥打电话太多手机号被封](https://so.toutiao.com/search?keyword=快递小哥打电话太多手机号被封)
 1. [郑州一停车场发生火灾现场浓烟滚滚](https://so.toutiao.com/search?keyword=郑州一停车场发生火灾现场浓烟滚滚)
 1. [俄外交部将就录音事件召见德国大使](https://so.toutiao.com/search?keyword=俄外交部将就录音事件召见德国大使)
-1. [快递员称加钱包裹上门送件引争议](https://so.toutiao.com/search?keyword=快递员称加钱包裹上门送件引争议)
 1. [新加坡被质疑垄断霉霉演唱会举办权](https://so.toutiao.com/search?keyword=新加坡被质疑垄断霉霉演唱会举办权)
 1. [男子拿走用来悼念宗庆后的AD钙奶](https://so.toutiao.com/search?keyword=男子拿走用来悼念宗庆后的AD钙奶)
 1. [停火谈判在即 以方拒派代表团](https://so.toutiao.com/search?keyword=停火谈判在即+以方拒派代表团)
 1. [6位省级党政一把手新身份亮相两会](https://so.toutiao.com/search?keyword=6位省级党政一把手新身份亮相两会)
-1. [你的孩子还会说方言吗](https://so.toutiao.com/search?keyword=你的孩子还会说方言吗)
 1. [六公主评《周处除三害》](https://so.toutiao.com/search?keyword=六公主评《周处除三害》)
 1. [调查显示以阻挠重要人道物资进加沙](https://so.toutiao.com/search?keyword=调查显示以阻挠重要人道物资进加沙)
 1. [杰伦·布朗：我们成长了也成熟了](https://so.toutiao.com/search?keyword=杰伦·布朗：我们成长了也成熟了)
@@ -53,7 +77,6 @@
 1. [蒙古族小伙演唱《祝酒歌》](https://so.toutiao.com/search?keyword=蒙古族小伙演唱《祝酒歌》)
 1. [吴艳妮创个人最好成绩但无缘半决赛](https://so.toutiao.com/search?keyword=吴艳妮创个人最好成绩但无缘半决赛)
 1. [法缺乏火药 欧盟官员甩锅中国棉花](https://so.toutiao.com/search?keyword=法缺乏火药+欧盟官员甩锅中国棉花)
-1. [马来西亚：尽快重启马航MH370搜索](https://so.toutiao.com/search?keyword=马来西亚：尽快重启马航MH370搜索)
 1. [哈里斯28分 76人战胜独行侠](https://so.toutiao.com/search?keyword=哈里斯28分+76人战胜独行侠)
 1. [女子家不明黑影深夜在摄像头前飘过](https://so.toutiao.com/search?keyword=女子家不明黑影深夜在摄像头前飘过)
 1. [一天内9家车企接连宣布降价促销](https://so.toutiao.com/search?keyword=一天内9家车企接连宣布降价促销)
